test/files/invalid/vector_bad_default.fbs
table Foo {
  x: [bool] = [true];
}